<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_app_name_label" />

                <EditText
                    android:id="@+id/editTextAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_app_name_hint" />
            </TableRow>

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server_host_label" />

                <EditText
                    android:id="@+id/editTextServerHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/settings_server_host_hint" />
            </TableRow>

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_server_port_label" />

                <EditText
                    android:id="@+id/editTextServerPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/settings_server_port_hint" />
            </TableRow>

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_protocol_type"
                    android:layout_gravity="center_vertical"/>

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/radioButtonHttp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_protocol_type_http"
                        android:checked="true"
                        android:paddingRight="5dp" />
                    <RadioButton android:id="@+id/radioButtonHttps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_protocol_type_https"
                        android:paddingRight="5dp" />
                </RadioGroup>
            </TableRow>


            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_timeout"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <SeekBar
                        android:id="@+id/seekBarTimeout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/textViewTimeout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/settings_timeout_init"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <Button
                android:id="@+id/buttonRestoreDefaults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_restore_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_save_button"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#808080"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <Button
                android:id="@+id/buttonResetData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_reset_local_data"
                android:layout_weight="1" />
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#808080"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <Button
                android:id="@+id/buttonShowLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_show_log"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonClearLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_clear_log"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>