<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_username"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/auth_password"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/vehicle"
            android:hint="@string/auth_vehicle" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/dialog_ok" />

    </TableRow>
</TableLayout>
