<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:padding="5dp">

    <!-- title -->
    <LinearLayout
        android:padding="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textStyle="italic"
            android:text="@string/order_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="5dp"
            android:textStyle="italic"
            android:id="@+id/orderNumber"/>
    </LinearLayout>

    <!-- status -->
    <RelativeLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:paddingLeft="5dp"
                    android:id="@+id/status"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/status_comment"/>
        </LinearLayout>

        <TextView
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/deadline"/>

    </RelativeLayout>

    <!-- address -->
    <RelativeLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="17dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/details_address"/>

        <TextView
            android:minWidth="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/address"/>
    </RelativeLayout>

    <!-- client -->
    <RelativeLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="17dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/details_client"/>

        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fio"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone2"/>
        </LinearLayout>
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/product_list"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:childDivider="@color/black">
    </ExpandableListView>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/details_notes"/>

        <TextView
            android:textSize="15dp"
            android:minWidth="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notes"
            android:text="@string/details_notes_stub"/>
    </LinearLayout>

</LinearLayout>
